[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ivs-valt-python"
# We tell the project the version is dynamic
dynamic = ["version"]
description = "A Python library for interacting with VALT"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Jared Buttitta", email = "jbuttitta@ipivs.com"}
]
# Use "Proprietary" or "Other/Proprietary License"
classifiers = [
    "Private :: Do Not Upload"
]

[tool.setuptools.dynamic]
# This points to the specific file and variable name
version = {attr = "valt._version.__version__"}

[tool.setuptools]
packages = ["valt"]