[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ivs-valt-python"
dynamic = ["version"]
description = "Python client library for the Intelligent Video Solutions (IVS) VALT REST API v3"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jared Buttitta", email = "jbuttitta@ipivs.com"}
]
keywords = ["valt", "ivs", "video", "recording", "rest", "api", "client"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.dynamic]
version = {attr = "valt._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["valt*"]
namespaces = true