[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ivs-valt-python"
dynamic = ["version"]
description = "Pure-Python client library for the IVS VALT REST API v3, covering room control, recording, scheduling, users, groups, cameras, comments, audio, and full administrative management."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jared Buttitta", email = "jbuttitta@ipivs.com"}
]
keywords = ["valt", "ivs", "video", "recording", "rest", "api", "client"]
classifiers = [
    "Private :: Do Not Upload"
]
dependencies = []

[tool.setuptools.dynamic]
version = {attr = "valt._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["valt*"]
namespaces = true